[package]
name = "phen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="phen"

[dependencies]
clap = "3.1.12"
dirs = "4.0.0"
log = "0.4.16"
regex = "1.5.5"
reqwest = "0.11.10"
tokio = { version = "1.17.0", features = ["full"] }

[features]
